--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
 
 <router-outlet />
+<h1>Hello World</h1>
+<div>
+  <h1>{{ title }}</h1>
+  <ul>
+    <li *ngFor="let item of foodItems">
+      {{ item.name }} - ${{ item.price }}
+    </li>
+  </ul>
+</div>
