--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div *ngFor="let item of foodItems">
-  <h3>{{ item.name }}</h3>
-  <p>Price: {{ item.price }}</p>
+  <p>{{ item.name }} - {{ item.price}}</p>
 </div>
+
